# non-framework-python-api

./: .gitignore  README.md
ms-likes/: README.md  requirement.sql
ms-property/: Dockerfile  compose.yaml
ms-property/project/: .env.example  pyproject.toml
ms-property/project/ms_project/: server.py  urls.py
ms-property/project/ms_project/models/: property.py
ms-property/project/ms_project/utils/: PropertyRepositoryMySQL.py  __init__.py
ms-property/project/ms_project/views/: property_views.py
ms-property/project/ms_property/: server.py  test_ms_project.py
ms-property/project/ms_property/models/: property.py
ms-property/project/ms_property/utils/: PropertyRepositoryMySQL.py  connection.py
ms-property/project/ms_property/views/: __init__.py  property_views.py
ms-property/project/tests/: test_ms_project.py
